# operon

./: .clang-tidy  .envrc  .gitignore  .gitlab-ci.yml  .gitmodules  .readthedocs.yml  BUILDING.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  HACKING.md  LICENSE  LICENSE.md  README.md  azure-pipelines.yml  build.sh  compile_commands.json  cxxopts.nix  default.nix  eigen_include_dir.patch  eli5.nix  flake.nix  include-dir.patch  operon.nix  operon_experiment.py  pmlb.nix  pybind11_cxx_standard.patch  pybind11_include.patch  qcachegrind.nix  shell.nix  test_gpu_simple.cpp  tracy.nix  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml  build.yml  ci.yml  close-inactive-issues.yml  test-linux.yml
cli/: CMakeLists.txt
cli/source/: gp.cpp  jit_setup.cpp  jit_setup.hpp  nsgp.cpp  nsgp_main.hpp  operator_factory.cpp  operator_factory.hpp  operon_enum.cpp  operon_gp.cpp  operon_nsgp.cpp  operon_nsgp_sms.cpp  operon_parse_model.cpp  pareto_front.cpp  pareto_front.hpp  probes_config.cpp  probes_config.hpp  reporter.hpp  util.cpp  util.hpp
cmake/: dev-mode.cmake  docs.cmake  get-git-revision.cmake  install-config.cmake  install-rules.cmake  variables.cmake
data/: Aircraft Lift Coefficient C_L.csv  Aircraft Maximum Lift Coefficient.csv  AirfoilSelfNoise.csv  AirfoilSelfNoise.json  Breiman-I.csv  Breiman-I.json  Chemical-I.csv  Chemical-I.json  Chemical-II.csv  Chemical-II.json  Concrete.csv  Concrete.json  Flow Psi.csv  Flow_stress.csv  Flow_stress.json  FrictionDyn-OneHot.csv  FrictionDyn-OneHot.json  FrictionStat-OneHot.csv  FrictionStat-OneHot.json  Friedman - I.csv  Friedman - II.csv  Friedman-I.csv  Friedman-I.json  Friedman-II.csv  Friedman-II.json  GP-Challenge.json  Keijzer 1.csv  Keijzer 10.csv  Keijzer 11.csv  Keijzer 12.csv  Keijzer 13.csv  Keijzer 14.csv  Keijzer 15.csv  Keijzer 2.csv  Keijzer 3.csv  Keijzer 4.csv  Keijzer 5.csv  Keijzer 6.csv  Keijzer 7.csv  Keijzer 8.csv  (+58 more)
docs/: build.rst  conf.py  example.rst  features.rst  index.rst  requirements.txt
docs/plans/: dispatch-extensibility.md
docs/research/: architecture-remediation-plan.md
example/: CMakeLists.txt  custom_primitives.cpp
examples/: gp-cpp-threaded.py  gp-python-operators.py  gp-run-experiment.ipynb  gp.cpp  gp.py  operon-gp.ipynb
include/ceres/: jet.h
ports/aria-csv/: portfile.cmake  vcpkg.json
ports/fluky/: portfile.cmake  vcpkg.json
ports/infix-parser/: portfile.cmake  vcpkg.json
ports/lbfgs/: portfile.cmake  vcpkg.json
ports/pratt-parser/: portfile.cmake  vcpkg.json
ports/unordered-dense/: portfile.cmake  vcpkg.json
ports/unordered_dense/: portfile.cmake
ports/vstat/: portfile.cmake  vcpkg.json
ports/xxhash-cpp/: portfile.cmake  vcpkg.json
python/: algorithm.cpp  creator.cpp  crossover.cpp  dataset.cpp  eval.cpp  generator.cpp  mutation.cpp  node.cpp  operon.cpp  problem.cpp  pset.cpp  reinserter.cpp  selection.cpp  tree.cpp
python/examples/: gp-cpp-threaded.py  gp-python-operators.py  gp-run-experiment.ipynb  operon-sklearn.py  operono-sklearn-pmlb-regression.ipynb  parse_operon_model.py
python/operon/: __init__.py  sklearn.py
results/: brood_1603885871_median.csv.xz
rtd/: build.rst  conf.py  example.rst  features.rst  index.rst  requirements.txt
scripts/: OSGP.xlsx  grid_search_gp.py  grid_search_osgp.py
source/algorithms/: enumeration.cpp  gp.cpp  mo_base.cpp  nsga2.cpp  nsgp2.cpp  nsgp_sms.cpp  solution_archive.cpp
source/core/: dataset.cpp  distance.cpp  format.cpp  grammar.cpp  node.cpp  pset.cpp  serialization.cpp  tree.cpp  tree_diff.cpp  version.cpp
source/formatter/: dot.cpp  infix.cpp  postfix.cpp  tree.cpp
source/hash/: content_hash.cpp  hash.cpp  metrohash64.cpp  zobrist.cpp
source/interpreter/: affine_evaluator.cpp  interpreter.cpp  interval_evaluator.cpp
source/operators/: crossover.cpp  evaluator.cpp  evaluator_error_metrics.cpp  local_search.cpp  mutation.cpp
source/parser/: infix.cpp
src/algorithms/: crossover.cpp  initialization.cpp  mutation.cpp  operators.hpp  selection.cpp  sgp.hpp
src/cli/: nsga2.cpp  operon_cli.cpp  operon_gp.cpp  operon_osgp.cpp  sgp.hpp  util.hpp
src/core/: dataset.cpp  dataset.hpp  eval.hpp  format.cpp  format.hpp  grammar.cpp  grammar.hpp  jsf.hpp  metrics.cpp  node.cpp  node.hpp  operator.hpp  problem.cpp  problem.hpp  pset.cpp  (+3 more)
test/: CMakeLists.txt  evaluation.cpp  implementation.cpp  initialization.cpp  nanobench.cpp  performance.cpp  selection.cpp  test.cpp
test/codegen/: irbuilder.cpp
test/implementation/: crossover.cpp  details.cpp  evaluation.cpp  hashing.cpp  infix_parser.cpp  initialization.cpp  mutation.cpp  nondominatedsort.cpp  random.cpp  selection.cpp  stat.cpp
test/performance/: distance.cpp  evaluation.cpp  evolution.cpp  hashing.cpp  initialization.cpp  math.cpp  nondominatedsort.cpp  random.cpp  stat.cpp
test/source/: operon_test.cpp  operon_test.hpp
test/source/implementation/: autodiff.cpp  backend.cpp  composed_function.cpp  content_hash.cpp  crossover.cpp  crowding_distance.cpp  dag.cpp  details.cpp  dispatch_table.cpp  diversity.cpp  enumeration.cpp  error_metrics.cpp  evaluation.cpp  evaluator.cpp  function_accuracy.cpp  ga_base.cpp  grammar.cpp  hashing.cpp  infix_parser.cpp  information_criteria.cpp  initialization.cpp  jit.cpp  metrics.cpp  mutation.cpp  node.cpp  node_impact.cpp  nondominatedsort.cpp  optimizer.cpp  pappus_backend.cpp  pappus_nsgp.cpp  permutation_importance.cpp  poisson_regression.cpp  probes.cpp  random.cpp  registry_coverage.cpp  selection.cpp  serialization.cpp  standard_library.cpp  stats.cpp  tree_diff.cpp  (+2 more)
test/source/performance/: autodiff.cpp  creator.cpp  distance.cpp  evaluation.cpp  infix_parser.cpp  jit_breakeven.cpp  nondominatedsort.cpp  primitives.cpp
tools/: _optuna.py  bench_jit_eval.py  bench_jit_sweep.py  bench_ndsort.py  benchmark_cache.py  compare_operon.py  generate_hessian_ground_truth.py  operon_compare  operon_experiment.py  results_db.py  run_operon.py  test_tools.py  tune_operon.py
triplets/: clangcl-toolchain.cmake  x64-windows-static-clang.cmake
(+320 files in other folders)
